# qnt_webui_testing

./: .gitignore  docker-compose.yml  flake.nix  pyproject.toml  readme.md  requirements.txt
webui/: test_webui.py
